--- a/incubator/mariadb-cluster/templates/slave-statefulset.xml
+++ b/incubator/mariadb-cluster/templates/slave-statefulset.xml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "slave.fullname" . }}
   labels:
     app: "{{ template "name" . }}"
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ template "mariadb.chart" . }}
     component: "slave"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
